# mdio-python

./: .darglint  .dockerignore  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPER_NOTES.md  LICENSE  README.md  noxfile.py  pyproject.toml  refactor_plan_bak.md
.devcontainer/: Dockerfile  Dockerfile.cli  Dockerfile.dev  Dockerfile.nox  devcontainer.json  post-create.sh  post-install.sh
.devcontainer/_DEV/: DEV_NOTES.md
.github/docker/: dask-worker.yaml
.github/workflows/: build-constraints.txt  constraints.txt  dask-worker.yml  docker.yml  labeler.yml  release.yml  tests.yml
_dev/: DEVELOPERS_NOTES.md  zmetadata.cpp.json  zmetadata.python.json
docker/: README.md  dask-prepare.sh  dask-worker-gcp.Dockerfile  slim-bullseye-3.10-dev.Dockerfile  slim-bullseye-3.10.Dockerfile
docs/: api_reference.md  cli_usage.md  conf.py  configuration.md  development_env.md  environment.md  index.md  installation.md  reference.md  requirements.txt  template_registry.md  usage.md
docs/data_models/: chunk_grids.md  compressors.md  data_types.md  dimensions.md  index.md  version_0.md  version_1.md
docs/guides/: grid_overrides.md  index.md  obn_data_import.md
docs/notebooks/: compression.ipynb  creation.ipynb  quickstart.ipynb  rechunking.ipynb
docs/schemas/: chunk_grids.md  index.md  version_0.md  version_1.md
docs/tutorials/: builder.ipynb  builder.md  compression.ipynb  corrupt_files.ipynb  creation.ipynb  custom_template.ipynb  index.md  quickstart.ipynb  rechunking.ipynb
notebooks/: ingestion_and_export.ipynb
src/mdio/: __init__.py  __main__.py  cli.py  constants.py  exceptions.py  factory_v1.py
src/mdio/api/: __init__.py  _environ.py  accessor.py  convenience.py  create.py  io.py  io_utils.py  opener.py
src/mdio/builder/: __init__.py  dataset_builder.py  formatting_html.py  template_registry.py  xarray_builder.py
src/mdio/commands/: __init__.py  copy.py  info.py  segy.py  utility.py  version.py
src/mdio/converters/: __init__.py  exceptions.py  mdio.py  numpy.py  segy.py  segy_to_mdio_v1.py  segy_to_mdio_v1_custom.py  segy_v1.py  type_converter.py
src/mdio/core/: __init__.py  config.py  demultiple.py  dimension.py  exceptions.py  factory.py  grid.py  indexing.py  indexing_bm.py  indexing_v0.py  indexing_v1.py  serialization.py  settings.py  storage_location.py  utils_read.py  utils_write.py  zarr_io.py
src/mdio/creators/: __init__.py  mdio.py
src/mdio/ingestion/: __init__.py  coordinate_utils.py  coordinates.py  dataset_factory.py  grid_qc.py  header_analysis.py  header_analyzer.py  index_strategies.py  metadata.py  pipeline.py  schema_resolver.py  validation.py
src/mdio/optimize/: __init__.py  access_pattern.py  common.py  patch.py
src/mdio/schema/: __init__.py  base.py  chunk_grid.py  compressors.py  dimension.py  dtype.py  metadata.py  units.py
src/mdio/schemas/: __init__.py  array.py  base.py  builder.py  chunk_grid.py  compressors.py  core.py  dataset.py  dimension.py  dtype.py  metadata.py  units.py
src/mdio/segy/: _disaster_recovery_wrapper.py  _raw_trace_wrapper.py  _standards_common.py  _standards_rev0.py  _workers.py  _workers_bm.py  _workers_v0.py  blocked_io.py  blocked_io_bm.py  blocked_io_v0.py  blocked_io_v1.py  byte_utils.py  compat.py  creation.py  ebcdic.py  exceptions.py  file.py  geometry.py  headers.py  headers_text.py  helpers_segy.py  ibm_float.py  parsers.py  scalar.py  segy_file_args.py  segy_file_async.py  segy_file_info.py  text_header.py  utilities.py
src/mdio/seismic/: __init__.py  _standards_common.py  _standards_rev0.py  _workers.py  blocked_io.py  byte_utils.py  creation.py  ebcdic.py  exceptions.py  geometry.py  headers.py  headers_text.py  helpers_segy.py  ibm_float.py  parsers.py  utilities.py
src/mdio/transpose_writers/: __init__.py  chunking.py  lod.py  shard.py
tests/: __init__.py  conftest.py  test_cli.py  test_main.py
tests/integration/: conftest.py  test_create_empty.py  test_create_empty_mdio.py  test_import_numpy.py  test_import_obn_grid_overrides.py  test_import_streamer_grid_overrides.py  test_numpy_ingest.py  test_rechunk.py  test_segy_ibm32_header_roundtrip.py  test_segy_import_export.py  test_segy_import_export_masked.py  test_segy_roundtrip_teapot.py  test_segy_to_mdio_v1.py  test_segy_to_mdio_v1_custom.py  test_v1_constructor.py  test_v1_serialization.py  test_xarray_constructor.py  test_z_create_empty.py  testing_data.py  testing_helpers.py
tests/integration/transpose_writers/: test_chunking.py
tests/integration/v1/: test_segy_import_v1.py  test_segy_to_mdio_v1.py
tests/unit/: __init__.py  conftest.py  test_accessor.py  test_auto_chunking.py  test_compat.py  test_convenience.py  test_coordinate_scalar.py  test_dimension.py  test_disaster_recovery_wrapper.py  test_environment.py  test_factory.py  test_grid_overrides_pydantic.py  test_ibm_ieee.py  test_indexing.py  test_ingestion_index_strategies.py  test_ingestion_schema_resolver.py  test_io.py  test_live_mask_chunksize.py  test_optimize_access_pattern.py  test_schema.py  test_segy_export_text_header.py  test_segy_file_header_modes.py  test_segy_grid_overrides.py  test_segy_header_projection.py  test_segy_spec_validation.py  test_serialization.py  test_template_factory.py  test_text_header.py  test_type_converter.py
tests/unit/converters/: test_type_converter.py
tests/unit/ingestion/: __init__.py  test_coordinates.py  test_dataset_factory.py  test_grid_qc.py  test_metadata.py  test_no_template_mutation.py  test_schema_effects.py  test_schema_resolver.py  test_segy_coordinates.py  test_segy_file_headers.py  test_segy_grid_overrides.py  test_segy_header_analysis.py  test_segy_index_strategies.py  test_segy_pipeline.py  test_segy_reader.py  test_segy_spec_validation.py  test_segy_validation.py  testing_helpers.py
tests/unit/reproducers/: test_bug613_open_handles.py
tests/unit/transpose_writers/: test_chunking.py  test_chunking_helpers.py
tests/unit/v1/: __init__.py  helpers.py  test_dataset_builder_add_coordinate.py  test_dataset_builder_add_dimension.py  (+6 more)
(+140 files in other folders)
