[project]
name = "multidimio"
version = "0.9.0"
description = "Cloud-native, scalable, and user-friendly multi dimensional energy data!"
authors = [{ name = "Altay Sansal", email = "altay.sansal@tgs.com" }]
requires-python = ">=3.11,<3.14"
readme = "README.md"
license = { "text" = "Apache-2.0" }
keywords = [
    "mdio",
    "multidimio",
    "seismic",
    "wind",
    "data",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 4 - Beta"
]

dependencies = [
    "click (>=8.1.7,<9.0.0)",
    "click-params (>=0.5.0,<0.6.0)",
    "zarr (>=3.0.6,<4.0.0)",
    "dask (>=2024.12.0)",
    "tqdm (>=4.67.0,<5.0.0)",
    "psutil (>=6.1.0,<7.0.0)",
    "pydantic (>=2.8.2,<3.0.0)",
    "pydantic-settings (>=2.4.0,<3.0.0)",
    "fsspec (>=2024.10.0)",
    "segy (>=0.4.0,<0.5.0)",
    "rich (>=13.9.4,<14.0.0)",
]

[project.optional-dependencies]
cloud = [
    "s3fs == 2024.12.0",
    "gcsfs (>=2024.10.0)",
    "adlfs (>=2024.7.0)",
]
distributed = [
    "distributed (>=2024.12.0)",
    "bokeh (>=3.4.2,<4.0.0)",
]
lossy = ["zfpy (>=1.0.1,<2.0.0)"]

[project.urls]
homepage = "https://mdio.dev/"
repository = "https://github.com/TGSAI/mdio-python"
documentation = "https://mdio-python.readthedocs.io"

[project.scripts]
mdio = "mdio.__main__:main"

[dependency-groups]
dev = [
    "black>=24.10.0,<25",
    "coverage[toml]>=7.6.7,<8",
    "darglint>=1.8.1,<2",
    "flake8>=7.1.0,<8",
    "flake8-bandit>=4.1.1,<5",
    "flake8-bugbear>=24.4.26,<25",
    "flake8-docstrings>=1.7.0,<2",
    "flake8-rst-docstrings>=0.3.0,<0.4",
    "furo>=2024.8.6",
    "isort>=5.13.2,<6",
    "mypy>=1.13.0,<2",
    "pep8-naming>=0.14.1,<0.15",
    "pre-commit>=4.0.1,<5",
    "pre-commit-hooks>=5.0.0,<6",
    "pytest>=8.3.3,<9",
    "pytest-dependency>=0.6.0,<0.7",
    "pyupgrade>=3.19.0,<4",
    "safety>=3.2.3,<4",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-click>=6.0.0,<7",
    "sphinx-copybutton>=0.5.2,<0.6",
    "typeguard>=4.4.1,<5",
    "xdoctest[colors]>=1.2.0,<2",
    "myst-parser>=3.0.1,<4",
    "Pygments>=2.18.0,<3",
    "Sphinx>=7.4.7,<8",
]

[tool.uv]
required-version = "0.6.11"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["src/mdio", "tests"]
relative_files = true

[tool.coverage.report]
show_missing = true
fail_under = 90
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[[tool.mypy.overrides]]
module = ["zarr"]
ignore_missing_imports = true

[tool.bumpversion]
current_version = "0.9.0"
allow_dirty = true
commit = false
tag = false
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)(\\.dev(?P<dev>\\d+))?"
serialize = [
    "{major}.{minor}.{patch}.dev{dev}",  # For dev releases
    "{major}.{minor}.{patch}"            # For stable releases
]

[build-system]
requires = ["setuptools", "wheel", "fastentrypoints"]
build-backend = "setuptools.build_meta"
