[project]
name = "multidimio"
version = "1.1.2"
description = "Cloud-native, scalable, and user-friendly multi dimensional energy data!"
authors = [{ name = "Altay Sansal", email = "altay.sansal@tgs.com" }]
requires-python = ">=3.11,<3.14"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]
keywords = ["mdio", "multidimio", "seismic", "wind", "data"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 4 - Beta",
]

dependencies = [
    "click>=8.3.0",
    "click-params>=0.5.0",
    "dask>=2025.9.1",
    "fsspec>=2025.9.0",
    "pint>=0.25.0",
    "psutil>=7.1.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.6.1",
    "rich>=14.1.0",
    "segy>=0.5.3",
    "tqdm>=4.67.1",
    "universal-pathlib>=0.3.3",
    "xarray>=2025.10.1",
    "zarr>=3.1.3",
]

[project.optional-dependencies]
cloud = ["s3fs>=2025.9.0", "gcsfs>=2025.9.0", "adlfs>=2025.8.0"]
distributed = ["distributed>=2025.9.1", "bokeh>=3.8.0"]
lossy = ["zfpy>=1.0.1"]

[project.urls]
homepage = "https://mdio.dev/"
repository = "https://github.com/TGSAI/mdio-python"
documentation = "https://mdio-python.readthedocs.io"

[project.scripts]
mdio = "mdio.__main__:main"

[dependency-groups]
dev = [
    "ruff>=0.14.0",
    "coverage[toml]>=7.10.7",
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "pre-commit-hooks>=6.0.0",
    "pytest>=8.4.2",
    "pytest-dependency>=0.6.0",
    "typeguard>=4.4.4",
    "xdoctest[colors]>=1.3.0",
    "Pygments>=2.19.2"
]

docs = [
    "aiohttp>=3.13.2",
    "autodoc-pydantic>=2.2.0",
    "furo>=2025.9.25",
    "linkify-it-py>=2.0.3",
    "matplotlib>=3.10.7",
    "myst-nb>=1.3.0",
    "sphinx>=8.2.3",
    "sphinx-autobuild>=2025.8.25",
    "sphinx-click>=6.1.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.1",
    "ipywidgets>=8.1.7",
]

[tool.uv]
required-version = ">=0.8.17"

[tool.ruff]
target-version = "py311"
src = ["src"]
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "B",    # bugbear
    "I",    # isort
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "D",    # pydocstyle
    "ANN",  # annotations
    "S",    # bandit
    "A",    # builtins
    "C4",   # comprehensions
    "DTZ",  # datetimez
    "EM",   # errmsg
    "ICN",  # import-conventions
    "PIE",  # pie
    "PT",   # pytest-style
    "RSE",  # raise
    "RET",  # return
    "SIM",  # simplify
    "TID",  # tidy-imports
    "TC",   # type-checking
    "ARG",  # unused-arguments
    "PTH",  # use-pathlib
    "TD",   # todos
    "PL",   # pylint
    "FLY",  # flynt
    "NPY",  # numpy
    "LOG",  # logging
    "G",    # logging-format
    "PERF", # perflint
    "FA",   # flake8-future-annotations
]

ignore = [
    "D107", # Missing docstring in __init__ ; should be in class docstring
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PLR2004"]
"tests/integration/test_segy_import_export_masked.py" = ["E501"]
"docs/tutorials/*.ipynb" = ["S101"]

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.pycodestyle]
max-line-length = 120
ignore-overlong-task-comments = true

[tool.pydoclint]
style = "google"
arg-type-hints-in-docstring = false
check-return-types = false
check-yield-types = false

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["src/mdio", "tests"]
relative_files = true

[tool.coverage.report]
show_missing = true
fail_under = 85
exclude_also = [
    "if __name__ == __main__:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.mypy]
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
disallow_untyped_defs = true                            # for strict mypy: (this is the tricky one)
plugins = ["pydantic.mypy", "numpy.typing.mypy_plugin"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.bumpversion]
current_version = "1.1.2"
allow_dirty = true
commit = false
tag = false
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)(\\.dev(?P<dev>\\d+))?"
serialize = [
    "{major}.{minor}.{patch}.dev{dev}", # For dev releases
    "{major}.{minor}.{patch}",          # For stable releases
]

[tool.uv.build-backend]
module-name = "mdio"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
